@@ -1045,6 +1045,13 @@ F<debian/rules> file of the relevant package.  As an example:
     # Disable dh_missing
     override_dh_missing:
 
+=item -
+
+The B<dh> command sequencer now runs B<dh_installtmpfiles> in the
+default sequence.  The B<dh_installtmpfiles> takes over handling of
+tmpfiles.d configuration files.  Related functionality in
+B<dh_installsystemd> is now disabled.
+
 =back
 
 =back
