@@ -277,27 +277,31 @@ foreach my $package (@{$dh{DOPACKAGES}}) {
 	}
 
 	install_unit($package, $name, 'mount', "$tmpdir/lib/systemd/system");
-	install_unit($package, $name, 'tmpfile', "$tmpdir/usr/lib/tmpfiles.d", 'conf');
+	# In compat 13+, this is handled by dh_installtmpfiles
+	install_unit($package, $name, 'tmpfile', "$tmpdir/usr/lib/tmpfiles.d", 'conf') if compat(12);
 }
 
 
-# Add postinst code blocks to handle tmpfiles
-foreach my $package (@{$dh{DOPACKAGES}}) {
-	my $tmpdir = tmpdir($package);
-	my @tmpfiles;
+if (compat(12)) {
+	# In compat 13+, this is handled by dh_installtmpfiles
+	# Add postinst code blocks to handle tmpfiles
+	foreach my $package (@{$dh{DOPACKAGES}}) {
+		my $tmpdir = tmpdir($package);
+		my @tmpfiles;
 
-	my @dirs = grep { -d } map { "${tmpdir}/$_" } qw(usr/lib/tmpfiles.d etc/tmpfiles.d);
+		my @dirs = grep { -d } map { "${tmpdir}/$_" } qw(usr/lib/tmpfiles.d etc/tmpfiles.d);
 
-	find({
-		wanted => sub {
-			my $name = $File::Find::name;
-			return unless -f $name;
-			push(@tmpfiles, basename($name)); },
-		no_chdir => 1,
-		}, @dirs) if @dirs;
+		find({
+			wanted => sub {
+				my $name = $File::Find::name;
+				return unless -f $name;
+				push(@tmpfiles, basename($name)); },
+			no_chdir => 1,
+			}, @dirs) if @dirs;
 
-	if (@tmpfiles) {
-		autoscript($package, 'postinst', 'postinst-init-tmpfiles', { 'TMPFILES' => join(' ', sort @tmpfiles) });
+		if (@tmpfiles) {
+			autoscript($package, 'postinst', 'postinst-init-tmpfiles', { 'TMPFILES' => join(' ', sort @tmpfiles) });
+		}
 	}
 }
 
