@@ -20,6 +20,13 @@ debhelper (12.8) UNRELEASED; urgency=medium
   * dh_missing: The --fail-missing parameter is now default
     in compat 13.  Thanks to Mattia Rizzolo for the
     suggestion.  (Closes: #917368)
+  * dh_installtmpfiles: New command extracted from
+    dh_installsystem that will handle tmpfiles.d
+    configuration.  Thanks to Michael Biebl for the
+    suggestion.  (Closes: #944478)
+  * dh_installsystemd: In compat 13, this command will no
+    longer manage tmpfiles.d configuration.
+  * dh: Run dh_installtmpfiles by default in compat 13.
 
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
